--- a/src/main/resources/templates/anuncio/detalhes.html
+++ b/src/main/resources/templates/anuncio/detalhes.html
@@ -15,11 +15,41 @@
         <div class="col-xl-9 mb-4" th:object="${anuncio}">
 
             <div class="container">
+
+
                 <div class="row h6 text-secondary">
-                    <span th:text="*{endereco.cidade}"></span> - <span th:text="*{endereco.uf}"></span>
+                    <span th:text="*{endereco.cidade}"></span>&nbsp;-&nbsp;<span th:text="*{endereco.uf}"></span>
                 </div>
                 <div class="row h3 text-primary">
-                    <span th:text="*{endereco.logradouro}"></span>, <span th:text="*{endereco.numero}"></span>
+                    <span th:text="*{endereco.logradouro}"></span>,&nbsp;<span th:text="*{endereco.numero}"></span>
+                </div>
+
+                <div id="carouselExampleIndicators" class="row carousel slide mb-3 mt-3" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner position-relative">
+                        <div class="hp-favorito hp-right-10" sec:authorize="isAuthenticated()"></div>
+                        <div class="carousel-item active">
+                            <img class="d-block w-100 rounded" src="/images/lista-imovel.png" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100 rounded" src="/images/lista-imovel.png" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100 rounded" src="/images/lista-imovel.png" alt="First slide">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
 
                 <div class="row text-dark">
@@ -38,17 +68,12 @@
                     <br>
                     <br>Observações:
                     <br>Conteúdo disponível em breve.
-
                 </div>
-
-
             </div>
-
-
-
         </div>
         <div class="col-xl-3 mb-4">
-            <div class="card border-0 mb-4 hp-background-gray">
+            <div class="card border-0 mb-4 hp-background-gray position-relative">
+                <div class="hp-favorito hp-right-10" sec:authorize="isAuthenticated()"></div>
                 <img class="card-img-top rounded" src="/images/lista-imovel.png" alt="localização do imovel">
                 <div class="card-body p-0">
                     <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">APARTAMENTO</span>
@@ -58,7 +83,8 @@
                     <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">Rua Visconde Bastos, 358</span>
                 </div>
             </div>
-            <div class="card border-0 mb-4 hp-background-gray">
+            <div class="card border-0 mb-4 hp-background-gray position-relative">
+                <div class="hp-favorito hp-right-10" sec:authorize="isAuthenticated()"></div>
                 <img class="card-img-top rounded" src="/images/lista-imovel.png" alt="localização do imovel">
                 <div class="card-body p-0">
                     <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">APARTAMENTO</span>
@@ -68,7 +94,8 @@
                     <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">Rua Visconde Bastos, 358</span>
                 </div>
             </div>
-            <div class="card border-0 mb-4 hp-background-gray">
+            <div class="card border-0 mb-4 hp-background-gray position-relative">
+                <div class="hp-favorito hp-right-10" sec:authorize="isAuthenticated()"></div>
                 <img class="card-img-top rounded" src="/images/lista-imovel.png" alt="localização do imovel">
                 <div class="card-body p-0">
                     <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">APARTAMENTO</span>
