--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,7 +14,7 @@
 <header th:fragment="header-sem-usuario">
     <nav class="navbar navbar-expand-lg navbar-light bg-white d-flex justify-content-end hp-h-100">
         <div class="container">
-            <a href="#" class="mr-4"><img src="/images/logo.svg" alt="House Pin - Sua referência em imóveis"/></a>
+            <a href="" class="mr-4"><img src="/images/logo.svg" alt="House Pin - Sua referência em imóveis"/></a>
             <button class="navbar-toggler border-white" type="button" data-toggle="collapse" data-target="#menu" aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -83,7 +83,7 @@
 <header th:fragment="header-usuario-logado">
     <nav class="navbar navbar-expand-lg navbar-light bg-white d-flex justify-content-end hp-h-100">
         <div class="container">
-            <a href="#" class="mr-4"><img src="/images/logo.svg" alt="House Pin - Sua referência em imóveis"/></a>
+            <a href="" class="mr-4"><img src="/images/logo.svg" alt="House Pin - Sua referência em imóveis"/></a>
             <button class="navbar-toggler border-white" type="button" data-toggle="collapse" data-target="#menu"
                     aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -105,11 +105,12 @@
                        class="btn font-weight-bold hp-font-size-14 text-secondary mr-0 bg-white hp-hover-text-entrar hp-color-gray hp-usuario-logado-opcoes"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span sec:authentication="principal.username"></span></a>
                     <div class="dropdown-menu dropdown-menu-right">
-                        <a th:href="@{/anuncio/cadastro(id=0)}" class="dropdown-item">Anunciar</a>
                         <button class="dropdown-item" type="button">Meu Perfil</button>
+                        <a th:href="@{/anuncio/cadastro(id=0)}" class="dropdown-item">Anunciar</a>
+                        <a th:href="@{/anuncio/meus-anuncios}" class="dropdown-item">Meus Anúncios</a>
+                        <a th:href="@{/anuncio/favoritos}" class="dropdown-item">Favoritos</a>
                         <a th:href="@{/relatorio(finalidade='venda')}" class="dropdown-item">Relatório de Venda</a>
                         <a th:href="@{/relatorio(finalidade='aluguel')}" class="dropdown-item">Relatório de Aluguel</a>
-                        <a th:href="@{/anuncio/meus-anuncios}" class="dropdown-item">Meus Anúncios</a>
                         <a th:href="@{/logout}"><button class="dropdown-item" type="button">Sair da Conta</button></a>
                     </div>
                 </div>
