Ajustes Visuais no Campo de Busca

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,15 +14,15 @@
 <header th:fragment="header-sem-usuario">
     <nav class="navbar navbar-expand-lg navbar-light bg-white d-flex justify-content-end hp-h-100">
         <div class="container">
-            <a href="" class="mr-4"><img src="/images/logo.svg" alt="House Pin - Sua referência em imóveis"/></a>
+            <a href="/" class="mr-4"><img src="/images/logo.svg" alt="House Pin - Sua referência em imóveis"/></a>
             <button class="navbar-toggler border-white" type="button" data-toggle="collapse" data-target="#menu" aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse navbar-toggler-lg bg-white text-lg-right pl-4 border-left" id="menu">
                 <ul class="navbar-nav font-weight-bold">
-                    <li class="nav-item mr-2"><a class="nav-link hp-font-size-14 hp-color-gray" href="novidades.html">NOVIDADES</a></li>
-                    <li class="nav-item mr-2"><a class="nav-link hp-font-size-14 hp-color-gray" href="promocoes.html">PROMOÇÕES</a></li>
-                    <li class="nav-item"><a class="nav-link hp-font-size-14 hp-color-gray" href="duvidas-frequentes.html">DÚVIDAS FREQUENTES</a></li>
+                    <li class="nav-item mr-2"><a class="nav-link hp-font-size-14 hp-color-gray" href="/">NOVIDADES</a></li>
+                    <li class="nav-item mr-2"><a class="nav-link hp-font-size-14 hp-color-gray" href="/">PROMOÇÕES</a></li>
+                    <li class="nav-item"><a class="nav-link hp-font-size-14 hp-color-gray" href="/">DÚVIDAS FREQUENTES</a></li>
                 </ul>
             </div>
             <div class="justify-content-end">
@@ -83,19 +83,16 @@
 <header th:fragment="header-usuario-logado">
     <nav class="navbar navbar-expand-lg navbar-light bg-white d-flex justify-content-end hp-h-100">
         <div class="container">
-            <a href="" class="mr-4"><img src="/images/logo.svg" alt="House Pin - Sua referência em imóveis"/></a>
+            <a href="/" class="mr-4"><img src="/images/logo.svg" alt="House Pin - Sua referência em imóveis"/></a>
             <button class="navbar-toggler border-white" type="button" data-toggle="collapse" data-target="#menu"
                     aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse navbar-toggler-lg bg-white text-lg-right pl-4 border-left" id="menu">
                 <ul class="navbar-nav font-weight-bold">
-                    <li class="nav-item mr-2"><a class="nav-link hp-font-size-14 hp-color-gray" href="novidades.html">NOVIDADES</a>
-                    </li>
-                    <li class="nav-item mr-2"><a class="nav-link hp-font-size-14 hp-color-gray" href="promocoes.html">PROMOÇÕES</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link hp-font-size-14 hp-color-gray"
-                                            href="duvidas-frequentes.html">DÚVIDAS FREQUENTES</a></li>
+                    <li class="nav-item mr-2"><a class="nav-link hp-font-size-14 hp-color-gray" href="/">NOVIDADES</a></li>
+                    <li class="nav-item mr-2"><a class="nav-link hp-font-size-14 hp-color-gray" href="/">PROMOÇÕES</a></li>
+                    <li class="nav-item"><a class="nav-link hp-font-size-14 hp-color-gray" href="/">DÚVIDAS FREQUENTES</a></li>
                 </ul>
             </div>
             <div class="justify-content-end">
